--- a/views/addPost.handlebars
+++ b/views/addPost.handlebars
@@ -16,20 +16,21 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <form id="postForm" action="/posts" name="sentMessage" novalidate="novalidate">
+                <form id="postForm" action="/createPost" method="post" name="sentMessage" novalidate="novalidate">
                     <div class="row">
                         <div class="col-md-6">
 
                             <div class="form-group">
-                                <input class="form-control" id="title" type="text" placeholder="Post Title *"
-                                    required="required"
+                                <input class="form-control" id="title" name="title" type="text"
+                                    placeholder="Post Title *" required="required"
                                     data-validation-required-message="Please enter your post Title.">
                                 <p class="help-block text-danger"></p>
                             </div>
 
                             <div class="form-group">
-                                <input class="form-control" id="userName" type="text" placeholder="Your Name *"
-                                    required="required" data-validation-required-message="Please enter your name.">
+                                <input class="form-control" id="userName" name="userName" type="text"
+                                    placeholder="Your Name *" required="required"
+                                    data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
                             </div>
                             {{!-- <div class="form-group">
@@ -42,7 +43,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <textarea class="form-control" id="detail" placeholder="Post Detail *"
+                                <textarea class="form-control" id="detail" name="detail" placeholder="Post Detail *"
                                     required="required"
                                     data-validation-required-message="Please enter post detail."></textarea>
                                 <p class="help-block text-danger"></p>
