post page updated

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -17,8 +17,8 @@
                             <li><i class="fas fa-clock"></i>{{dateFormat post.dateCreated "DD MMM YYYY"}}</li>
 
                         </ul>
-                        <h3>{{this.title}}</h3>
-                        <p>{{this.detail}}</p>
+                        <h3>{{post.title}}</h3>
+                        <p>{{post.detail}}</p>
                     </div>
 
 
