--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -16,32 +16,34 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <form id="postForm" action="/posts/{{post._id}}?_method=PUT" method="post" name="sentMessage" novalidate="novalidate">
+                <form id="postForm" action="/posts/{{post._id}}?_method=PUT" method="post" name="sentMessage"
+                    novalidate="novalidate">
                     <div class="row">
                         <div class="col-md-6">
 
                             <div class="form-group">
-                                <input class="form-control" id="title" name="title" type="text" value="{{post.title}}"
+                                <input class="form-control" name="title" type="text" value="{{post.title}}"
                                     placeholder="Post Title *" required="required"
                                     data-validation-required-message="Please enter your post Title.">
                                 <p class="help-block text-danger"></p>
                             </div>
 
                             <div class="form-group">
-                                <input class="form-control" id="userName" name="userName" type="text" value="{{post.userName}}"
+                                <input class="form-control" name="userName" type="text" value="{{post.userName}}"
                                     placeholder="Your Name *" required="required"
                                     data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
-                            </div>              
+                            </div>
 
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <textarea class="form-control" id="detail" name="detail" placeholder="Post Detail *" value="{{post.detail}}"
-                                    required="required"
+                                <textarea class="form-control" name="detail" placeholder="Post Detail *"
+                                    value="{{post.detail}}" required="required"
                                     data-validation-required-message="Please enter post detail."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
+
                         </div>
                         <div class="clearfix"></div>
                         <div class="col-lg-12 text-center">
