--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -14,3 +14,10 @@
         </div>
     </div>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="js/lightbox-plus-jquery.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
